fixed spacing in location container

--- a/YStemAndChess/src/app/pages/be-amentor/be-amentor.component.scss
+++ b/YStemAndChess/src/app/pages/be-amentor/be-amentor.component.scss
@@ -138,7 +138,7 @@ body {
     #locations-statement p {
         float:left;
         width:38%;
-        margin-top:1%;
+        margin-top:3%;
         margin-left:7%;
         font-family: 'Roboto';
         font-style: normal;
